@@ -1,0 +1,3 @@
+[DBsTreeSorting]
+algorithm = default
+
