@@ -9,6 +9,8 @@ The Plugins Manager has been debugged.
 
 The timeseries plugin has been debugged. Interpolation errors have been fixed.
 
+The development of a plugin for sorting the databases tree has started :)
+
 ** October 02, 2013 **
 The package preferences has been analyzed with pylint.
 
